Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-807

Proton does not decode AMQP small long encoding correctly and does not use it.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.8
    • proton-0.9
    • proton-c
    • None

    Description

      Proton incorrectly decodes an AMQP small long encoded value of -1 as 255.

      Proton itself never uses the small long encoding but qpid dispatch does, which is where this cropped up.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: