PROTON-807: Fix incorrect decoding of small long values.

codec/decoder.c: Was treating signed small long values as unsigned.
proton-j/src/main/resources/ccodec.py: Added missing byte operations, fix ulong decoeing.
tests/python/proton_tests/codec.py: Test all integer types, positive, negative and min/max.